# Pico-USB-Remote-Status-Display

./: CMakeLists.txt  README.md
lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
lib/Fonts/: CMakeLists.txt  fonts.h
lib/GUI/: GUI_Paint.c  GUI_Paint.h
lib/Icm20948/: CMakeLists.txt
lib/Infrared/: CMakeLists.txt
lib/LCD/: CMakeLists.txt  LCD_1in3.c
src/: CMakeLists.txt  LCD_Test.h  check_keys.c  check_keys.h  main.c  usb_read.c  usb_read.h
